<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="header">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="button_1">Spotify Streamer</string>
    <string name="button_2">Scores App</string>
    <string name="button_3">Library App</string>
    <string name="button_4">Build It Bigger</string>
    <string name="button_5">XYZ Reader</string>
    <string name="button_6">Capstone: My Own App</string>
</resources>
