<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/HeadLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/header" />

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_1" />

            <Button
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_2" />

            <Button
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_3" />

            <Button
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_4" />

            <Button
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_5" />

            <Button
                style="@style/AccentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_6" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>